Change descriptions, titles, etc.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-= TZInfo - Daylight-savings aware timezone support for Ruby
+= TZInfo - Ruby Timezone Library
 
-TZInfo[http://tzinfo.rubyforge.org] provides daylight-savings aware 
+TZInfo[http://tzinfo.rubyforge.org] provides daylight savings aware 
 transformations between times in different timezones.
 
 
@@ -10,9 +10,9 @@ TZInfo requires a source of timezone data. There are two built-in options:
 
 1. The TZInfo::Data library (the tzinfo-data gem). TZInfo::Data contains a set 
    of Ruby modules that are generated from the {IANA Time Zone Database}[http://www.iana.org/time-zones].
-2. A zoneinfo directory on your system. Most Unix-like systems include a 
-   zoneinfo directory containing timezone definitions. These are also generated
-   from the {IANA Time Zone Database}[http://www.iana.org/time-zones].
+2. A zoneinfo directory. Most Unix-like systems include a zoneinfo directory 
+   containing timezone definitions. These are also generated from the 
+   {IANA Time Zone Database}[http://www.iana.org/time-zones].
 
 By default, TZInfo::Data will be used. If TZInfo::Data is not available (i.e. 
 if require 'tzinfo/data' fails), then TZInfo will search for a zoneinfo
