Update to tzdata version 2013g.
http://mm.icann.org/pipermail/tz-announce/2013-October/000015.html

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2013c) - ???????????
+== Version ?????? (tzdata v2013g) - ???????????
 
-* Updated to tzdata version 2013c
-  (http://mm.icann.org/pipermail/tz-announce/2013-April/000011.html).
+* Updated to tzdata version 2013g
+  (http://mm.icann.org/pipermail/tz-announce/2013-October/000015.html).
 
 
 == Version 0.3.37 (tzdata v2013b) - 11-Mar-2013
