--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2013g) - ???????????
+== Version 0.3.38 (tzdata v2013g) - 8-Oct-2013
 
 * Updated to tzdata version 2013g
   (http://mm.icann.org/pipermail/tz-announce/2013-October/000015.html).
