--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2014a) - ??????????
+== Version 0.3.39 (tzdata v2014a) - 9-Mar-2014
 
 * Updated to tzdata version 2014a
   (http://mm.icann.org/pipermail/tz-announce/2014-March/000018.html).
