--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2014c) - ??????????
+== Version ?????? (tzdata v2014d) - ??????????
 
-* Updated to tzdata version 2014c
-  (http://mm.icann.org/pipermail/tz-announce/2014-May/000020.html).
+* Updated to tzdata version 2014d
+  (http://mm.icann.org/pipermail/tz-announce/2014-May/000021.html).
 
 
 == Version 0.3.39 (tzdata v2014a) - 9-Mar-2014
