--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2014e) - ??????????
+== Version 0.3.40 (tzdata v2014e) - 10-Jul-2014
 
 * Updated to tzdata version 2014e
   (http://mm.icann.org/pipermail/tz-announce/2014-June/000022.html).
