Update to tzdata version 2014f.
http://mm.icann.org/pipermail/tz-announce/2014-August/000023.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2014f) - ???????????
+
+* Updated to tzdata version 2014f
+  (http://mm.icann.org/pipermail/tz-announce/2014-August/000023.html).
+
+
 == Version 0.3.40 (tzdata v2014e) - 10-Jul-2014
 
 * Updated to tzdata version 2014e
