--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2014f) - ???????????
+== Version 0.3.41 (tzdata v2014f) - 8-Aug-2014
 
 * Updated to tzdata version 2014f
   (http://mm.icann.org/pipermail/tz-announce/2014-August/000023.html).
