--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2014g) - ??????????
+
+* Updated to tzdata version 2014g
+  (http://mm.icann.org/pipermail/tz-announce/2014-August/000024.html).
+
+
 == Version 0.3.41 (tzdata v2014f) - 8-Aug-2014
 
 * Updated to tzdata version 2014f
