Update to tzdata version 2014h.
http://mm.icann.org/pipermail/tz-announce/2014-September/000025.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2014g) - ??????????
+== Version ?????? (tzdata v2014h) - ??????????
 
-* Updated to tzdata version 2014g
-  (http://mm.icann.org/pipermail/tz-announce/2014-August/000024.html).
+* Updated to tzdata version 2014h
+  (http://mm.icann.org/pipermail/tz-announce/2014-September/000025.html).
 
 
 == Version 0.3.41 (tzdata v2014f) - 8-Aug-2014
