--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2014i) - ??????????
+== Version 0.3.42 (tzdata v2014i) - 23-Oct-2014
 
 * Updated to tzdata version 2014i
   (http://mm.icann.org/pipermail/tz-announce/2014-October/000026.html).
