Update to tzdata version 2014j.
http://mm.icann.org/pipermail/tz-announce/2014-November/000027.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2014j) - ???????????
+
+* Updated to tzdata version 2014j
+  (http://mm.icann.org/pipermail/tz-announce/2014-November/000027.html).
+
+
 == Version 0.3.42 (tzdata v2014i) - 23-Oct-2014
 
 * Updated to tzdata version 2014i
