--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2015a) - ???????????
+== Version 0.3.43 (tzdata v2015a) - 31-Jan-2015
 
 * Updated to tzdata version 2015a
   (http://mm.icann.org/pipermail/tz-announce/2015-January/000028.html).
