--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2015b) - ???????????
+
+* Updated to tzdata version 2015b
+  (http://mm.icann.org/pipermail/tz-announce/2015-March/000029.html).
+
+
 == Version 0.3.43 (tzdata v2015a) - 31-Jan-2015
 
 * Updated to tzdata version 2015a
