--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2015c) - ???????????
+== Version ?????? (tzdata v2015d) - ???????????
 
-* Updated to tzdata version 2015c
-  (http://mm.icann.org/pipermail/tz-announce/2015-April/000030.html).
+* Updated to tzdata version 2015d
+  (http://mm.icann.org/pipermail/tz-announce/2015-April/000031.html).
 
 
 == Version 0.3.43 (tzdata v2015a) - 31-Jan-2015
