--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2015d) - ???????????
+== Version 0.3.44 (tzdata v2015d) - 24-Apr-2015
 
 * Updated to tzdata version 2015d
   (http://mm.icann.org/pipermail/tz-announce/2015-April/000031.html).
