Update to tzdata version 2015e.
http://mm.icann.org/pipermail/tz-announce/2015-June/000032.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2015e) - ???????????
+
+* Updated to tzdata version 2015e
+  (http://mm.icann.org/pipermail/tz-announce/2015-June/000032.html).
+
+
 == Version 0.3.44 (tzdata v2015d) - 24-Apr-2015
 
 * Updated to tzdata version 2015d
