--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2015e) - ???????????
+== Version ?????? (tzdata v2015f) - ???????????
 
-* Updated to tzdata version 2015e
-  (http://mm.icann.org/pipermail/tz-announce/2015-June/000032.html).
+* Updated to tzdata version 2015f
+  (http://mm.icann.org/pipermail/tz-announce/2015-August/000033.html).
 
 
 == Version 0.3.44 (tzdata v2015d) - 24-Apr-2015
