Update to tzdata version 2015g.
http://mm.icann.org/pipermail/tz-announce/2015-October/000034.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2015f) - ???????????
+== Version ?????? (tzdata v2015g) - ???????????
 
-* Updated to tzdata version 2015f
-  (http://mm.icann.org/pipermail/tz-announce/2015-August/000033.html).
+* Updated to tzdata version 2015g
+  (http://mm.icann.org/pipermail/tz-announce/2015-October/000034.html).
 
 
 == Version 0.3.44 (tzdata v2015d) - 24-Apr-2015
