--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2015g) - ???????????
+== Version 0.3.45 (tzdata v2015g) - 03-Oct-2015
 
 * Updated to tzdata version 2015g
   (http://mm.icann.org/pipermail/tz-announce/2015-October/000034.html).
