Update to tzdata version 2016b.
https://mm.icann.org/pipermail/tz-announce/2016-March/000036.html.

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2016a) - ??????????
+== Version ?????? (tzdata v2016b) - ??????????
 
-* Updated to tzdata version 2016a
-  (https://mm.icann.org/pipermail/tz-announce/2016-January/000035.html).
+* Updated to tzdata version 2016b
+  (https://mm.icann.org/pipermail/tz-announce/2016-March/000036.html).
 
 
 == Version 0.3.46 (tzdata v2015g) - 2-Dec-2015
