--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2016b) - ??????????
+== Version 0.3.47 (tzdata v2016b) - 15-Mar-2016
 
 * Updated to tzdata version 2016b
   (https://mm.icann.org/pipermail/tz-announce/2016-March/000036.html).
