--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2016c) - ???????????
+== Version 0.3.48 (tzdata v2016c) - 23-Mar-2016
 
 * Updated to tzdata version 2016c
   (https://mm.icann.org/pipermail/tz-announce/2016-March/000037.html).
