Update to tzdata version 2016d.
https://mm.icann.org/pipermail/tz-announce/2016-April/000038.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2016d) - ???????????
+
+* Updated to tzdata version 2016d
+  (https://mm.icann.org/pipermail/tz-announce/2016-April/000038.html).
+
+
 == Version 0.3.48 (tzdata v2016c) - 23-Mar-2016
 
 * Updated to tzdata version 2016c
