--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2016d) - ???????????
+== Version 0.3.49 (tzdata v2016d) - 18-Apr-2016
 
 * Updated to tzdata version 2016d
   (https://mm.icann.org/pipermail/tz-announce/2016-April/000038.html).
