Update to tzdata version 2016e.
https://mm.icann.org/pipermail/tz-announce/2016-June/000039.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2016e) - ???????????
+
+* Updated to tzdata version 2016e
+  (https://mm.icann.org/pipermail/tz-announce/2016-June/000039.html).
+
+
 == Version 0.3.49 (tzdata v2016d) - 18-Apr-2016
 
 * Updated to tzdata version 2016d
