--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2016e) - ???????????
+== Version 0.3.50 (tzdata v2016e) - 14-Jun-2016
 
 * Updated to tzdata version 2016e
   (https://mm.icann.org/pipermail/tz-announce/2016-June/000039.html).
