Update to tzdata version 2016f.
https://mm.icann.org/pipermail/tz-announce/2016-July/000040.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2016f) - ???????????
+
+* Updated to tzdata version 2016f
+  (https://mm.icann.org/pipermail/tz-announce/2016-July/000040.html).
+
+
 == Version 0.3.50 (tzdata v2016e) - 14-Jun-2016
 
 * Updated to tzdata version 2016e
