--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2016f) - ???????????
+== Version 0.3.51 (tzdata v2016f) - 5-Jul-2016
 
 * Updated to tzdata version 2016f
   (https://mm.icann.org/pipermail/tz-announce/2016-July/000040.html).
