Update to tzdata version 2016g.
https://mm.icann.org/pipermail/tz-announce/2016-September/000041.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2016g) - ??????????
+
+* Updated to tzdata version 2016g
+  (https://mm.icann.org/pipermail/tz-announce/2016-September/000041.html).
+
+
 == Version 0.3.51 (tzdata v2016f) - 5-Jul-2016
 
 * Updated to tzdata version 2016f
