Update to tzdata version 2016h.
https://mm.icann.org/pipermail/tz-announce/2016-October/000042.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2016g) - ??????????
+== Version ?????? (tzdata v2016h) - ??????????
 
-* Updated to tzdata version 2016g
-  (https://mm.icann.org/pipermail/tz-announce/2016-September/000041.html).
+* Updated to tzdata version 2016h
+  (https://mm.icann.org/pipermail/tz-announce/2016-October/000042.html).
 
 
 == Version 0.3.51 (tzdata v2016f) - 5-Jul-2016
