--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2016h) - ??????????
+== Version 0.3.52 (tzdata v2016h) - 28-Oct-2016
 
 * Updated to tzdata version 2016h
   (https://mm.icann.org/pipermail/tz-announce/2016-October/000042.html).
