--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2016i) - ???????????
+
+* Updated to tzdata version 2016i
+  (https://mm.icann.org/pipermail/tz-announce/2016-October/000042.html).
+
+
 == Version 0.3.52 (tzdata v2016h) - 28-Oct-2016
 
 * Updated to tzdata version 2016h
