--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2016i) - ???????????
+== Version ?????? (tzdata v2016j) - ???????????
 
-* Updated to tzdata version 2016i
-  (https://mm.icann.org/pipermail/tz-announce/2016-November/000043.html).
+* Updated to tzdata version 2016j
+  (https://mm.icann.org/pipermail/tz-announce/2016-November/000044.html).
 
 
 == Version 0.3.52 (tzdata v2016h) - 28-Oct-2016
