Update to tzdata version 2017b.
https://mm.icann.org/pipermail/tz-announce/2017-March/000046.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2017a) - ???????????
+== Version ?????? (tzdata v2017b) - ???????????
 
-* Updated to tzdata version 2017a
-  (https://mm.icann.org/pipermail/tz-announce/2017-February/000045.html).
+* Updated to tzdata version 2017b
+  (https://mm.icann.org/pipermail/tz-announce/2017-March/000046.html).
 
 
 == Version 0.3.52 (tzdata v2016h) - 28-Oct-2016
