--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2017b) - ???????????
+== Version 0.3.53 (tzdata v2017b) - 23-Mar-2017
 
 * Updated to tzdata version 2017b
   (https://mm.icann.org/pipermail/tz-announce/2017-March/000046.html).
