--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2017c) - ???????????
+
+* Updated to tzdata version 2017c
+  (https://mm.icann.org/pipermail/tz-announce/2017-October/000047.html).
+
+
 == Version 0.3.53 (tzdata v2017b) - 23-Mar-2017
 
 * Updated to tzdata version 2017b
