Update to tzdata version 2018d.
https://mm.icann.org/pipermail/tz-announce/2018-March/000049.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2018c) - ???????????
+== Version ?????? (tzdata v2018d) - ???????????
 
-* Updated to tzdata version 2018c
-  (https://mm.icann.org/pipermail/tz-announce/2018-January/000048.html).
+* Updated to tzdata version 2018d
+  (https://mm.icann.org/pipermail/tz-announce/2018-March/000049.html).
 
 
 == Version 0.3.53 (tzdata v2017b) - 23-Mar-2017
