--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2018d) - ???????????
+== Version 0.3.54 (tzdata v2018d) - 25-Mar-2018
 
 * Updated to tzdata version 2018d
   (https://mm.icann.org/pipermail/tz-announce/2018-March/000049.html).
