--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2018e) - 5-May-2018
+
+* Updated to tzdata version 2018e
+  (https://mm.icann.org/pipermail/tz-announce/2018-May/000050.html).
+
+
 == Version 0.3.54 (tzdata v2018d) - 25-Mar-2018
 
 * Updated to tzdata version 2018d
