Update to tzdata version 2018f.
https://mm.icann.org/pipermail/tz-announce/2018-October/000051.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2018e) - 5-May-2018
+== Version ?????? (tzdata v2018f) - ??????????
 
-* Updated to tzdata version 2018e
-  (https://mm.icann.org/pipermail/tz-announce/2018-May/000050.html).
+* Updated to tzdata version 2018f
+  (https://mm.icann.org/pipermail/tz-announce/2018-October/000051.html).
 
 
 == Version 0.3.54 (tzdata v2018d) - 25-Mar-2018
