Update to tzdata version 2018g.
https://mm.icann.org/pipermail/tz-announce/2018-October/000052.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2018f) - ??????????
+== Version ?????? (tzdata v2018g) - ??????????
 
-* Updated to tzdata version 2018f
-  (https://mm.icann.org/pipermail/tz-announce/2018-October/000051.html).
+* Updated to tzdata version 2018g
+  (https://mm.icann.org/pipermail/tz-announce/2018-October/000052.html).
 
 
 == Version 0.3.54 (tzdata v2018d) - 25-Mar-2018
