--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2018g) - ??????????
+== Version 0.3.55 (tzdata v2018g) - 27-Oct-2018
 
 * Updated to tzdata version 2018g
   (https://mm.icann.org/pipermail/tz-announce/2018-October/000052.html).
