Update to tzdata version 2018h.
https://mm.icann.org/pipermail/tz-announce/2018-December/000053.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2018h) - ???????????
+
+* Updated to tzdata version 2018h
+  (https://mm.icann.org/pipermail/tz-announce/2018-December/000053.html).
+
+
 == Version 0.3.55 (tzdata v2018g) - 27-Oct-2018
 
 * Updated to tzdata version 2018g
