Update to tzdata version 2018i.
https://mm.icann.org/pipermail/tz-announce/2018-December/000054.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2018h) - ???????????
+== Version ?????? (tzdata v2018i) - ???????????
 
-* Updated to tzdata version 2018h
-  (https://mm.icann.org/pipermail/tz-announce/2018-December/000053.html).
+* Updated to tzdata version 2018i
+  (https://mm.icann.org/pipermail/tz-announce/2018-December/000054.html).
 
 
 == Version 0.3.55 (tzdata v2018g) - 27-Oct-2018
