Update to tzdata version 2019a.
https://mm.icann.org/pipermail/tz-announce/2019-March/000055.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2018i) - ???????????
+== Version ?????? (tzdata v2019a) - ???????????
 
-* Updated to tzdata version 2018i
-  (https://mm.icann.org/pipermail/tz-announce/2018-December/000054.html).
+* Updated to tzdata version 2019a
+  (https://mm.icann.org/pipermail/tz-announce/2019-March/000055.html).
 
 
 == Version 0.3.55 (tzdata v2018g) - 27-Oct-2018
