--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2019a) - ???????????
+== Version ?????? (tzdata v2019b) - ???????????
 
-* Updated to tzdata version 2019a
-  (https://mm.icann.org/pipermail/tz-announce/2019-March/000055.html).
+* Updated to tzdata version 2019b
+  (https://mm.icann.org/pipermail/tz-announce/2019-July/000056.html).
 
 
 == Version 0.3.55 (tzdata v2018g) - 27-Oct-2018
