Update to tzdata version 2019c.
https://mm.icann.org/pipermail/tz-announce/2019-September/000057.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2019b) - ???????????
+== Version ?????? (tzdata v2019c) - ???????????
 
-* Updated to tzdata version 2019b
-  (https://mm.icann.org/pipermail/tz-announce/2019-July/000056.html).
+* Updated to tzdata version 2019c
+  (https://mm.icann.org/pipermail/tz-announce/2019-September/000057.html).
 
 
 == Version 0.3.55 (tzdata v2018g) - 27-Oct-2018
