--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2019c) - ???????????
+== Version 0.3.56 (tzdata v2019c) - 1-Nov-2019
 
 * Updated to tzdata version 2019c
   (https://mm.icann.org/pipermail/tz-announce/2019-September/000057.html).
