Update to tzdata version 2020a.
https://mm.icann.org/pipermail/tz-announce/2020-April/000058.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2020a) - ???????????
+
+* Updated to tzdata version 2020a
+  (https://mm.icann.org/pipermail/tz-announce/2020-April/000058.html).
+
+
 == Version 0.3.56 (tzdata v2019c) - 1-Nov-2019
 
 * Updated to tzdata version 2019c
