--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2020a) - ???????????
+== Version 0.3.57 (tzdata v2020a) - 17-May-2020
 
 * Updated to tzdata version 2020a
   (https://mm.icann.org/pipermail/tz-announce/2020-April/000058.html).
