--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2020b) - ???????????
+
+* Updated to tzdata version 2020b
+  (https://mm.icann.org/pipermail/tz-announce/2020-October/000059.html).
+
+
 == Version 0.3.57 (tzdata v2020a) - 17-May-2020
 
 * Updated to tzdata version 2020a
