--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2020c) - ???????????
+== Version ?????? (tzdata v2020d) - ???????????
 
-* Updated to tzdata version 2020c
-  (https://mm.icann.org/pipermail/tz-announce/2020-October/000060.html).
+* Updated to tzdata version 2020d
+  (https://mm.icann.org/pipermail/tz-announce/2020-October/000062.html).
 
 
 == Version 0.3.57 (tzdata v2020a) - 17-May-2020
