--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2020d) - ???????????
+== Version 0.3.58 (tzdata v2020d) - 8-Nov-2020
 
 * Updated to tzdata version 2020d
   (https://mm.icann.org/pipermail/tz-announce/2020-October/000062.html).
