Update to tzdata version 2020e.
https://mm.icann.org/pipermail/tz-announce/2020-December/000063.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2020e) - ??????????
+
+* Updated to tzdata version 2020e
+  (https://mm.icann.org/pipermail/tz-announce/2020-December/000063.html).
+
+
 == Version 0.3.58 (tzdata v2020d) - 8-Nov-2020
 
 * Updated to tzdata version 2020d
