--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2020e) - ??????????
+== Version 0.3.59 (tzdata v2020e) - 24-Dec-2020
 
 * Updated to tzdata version 2020e
   (https://mm.icann.org/pipermail/tz-announce/2020-December/000063.html).
