--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2020f) - ???????????
+
+* Updated to tzdata version 2020f
+  (https://mm.icann.org/pipermail/tz-announce/2020-December/000064.html).
+
+
 == Version 0.3.59 (tzdata v2020e) - 24-Dec-2020
 
 * Updated to tzdata version 2020e
