Update to tzdata version 2021a.
https://mm.icann.org/pipermail/tz-announce/2021-January/000065.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2020f) - ???????????
+== Version ?????? (tzdata v2021a) - ???????????
 
-* Updated to tzdata version 2020f
-  (https://mm.icann.org/pipermail/tz-announce/2020-December/000064.html).
+* Updated to tzdata version 2021a
+  (https://mm.icann.org/pipermail/tz-announce/2021-January/000065.html).
 
 
 == Version 0.3.59 (tzdata v2020e) - 24-Dec-2020
