--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2021a) - ???????????
+== Version 0.3.60 (tzdata v2021a) - 6-Feb-2021
 
 * Updated to tzdata version 2021a
   (https://mm.icann.org/pipermail/tz-announce/2021-January/000065.html).
