Update to tzdata version 2021c.
https://mm.icann.org/pipermail/tz-announce/2021-October/000067.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2021b) - ??????????
+== Version ?????? (tzdata v2021c) - ??????????
 
-* Updated to tzdata version 2021b
-  (https://mm.icann.org/pipermail/tz-announce/2021-September/000066.html).
+* Updated to tzdata version 2021c
+  (https://mm.icann.org/pipermail/tz-announce/2021-October/000067.html).
 
 
 == Version 0.3.60 (tzdata v2021a) - 6-Feb-2021
