--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2021c) - ??????????
+== Version ?????? (tzdata v2021d) - ??????????
 
-* Updated to tzdata version 2021c
-  (https://mm.icann.org/pipermail/tz-announce/2021-October/000067.html).
+* Updated to tzdata version 2021d
+  (https://mm.icann.org/pipermail/tz-announce/2021-October/000068.html).
 
 
 == Version 0.3.60 (tzdata v2021a) - 6-Feb-2021
