Update to tzdata version 2022a.
https://mm.icann.org/pipermail/tz-announce/2022-March/000070.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2021e) - ??????????
+== Version ?????? (tzdata v2022a) - ??????????
 
-* Updated to tzdata version 2021e
-  (https://mm.icann.org/pipermail/tz-announce/2021-October/000069.html).
+* Updated to tzdata version 2022a
+  (https://mm.icann.org/pipermail/tz-announce/2022-March/000070.html).
 
 
 == Version 0.3.60 (tzdata v2021a) - 6-Feb-2021
