--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2022b) - ???????????
+
+* Updated to tzdata version 2022b
+  (https://mm.icann.org/pipermail/tz-announce/2022-August/000071.html).
+
+
 == Version 0.3.61 (tzdata v2022a) - 19-Jul-2022
 
 * Fixed a relative path traversal bug that could cause arbitrary files to be
