Update to tzdata version 2022c.
https://mm.icann.org/pipermail/tz-announce/2022-August/000072.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2022b) - ???????????
+== Version ?????? (tzdata v2022c) - ???????????
 
-* Updated to tzdata version 2022b
-  (https://mm.icann.org/pipermail/tz-announce/2022-August/000071.html).
+* Updated to tzdata version 2022c
+  (https://mm.icann.org/pipermail/tz-announce/2022-August/000072.html).
 
 
 == Version 0.3.61 (tzdata v2022a) - 19-Jul-2022
