Update to tzdata version 2022f.
https://mm.icann.org/pipermail/tz-announce/2022-October/000075.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2022e) - ???????????
+== Version ?????? (tzdata v2022f) - ???????????
 
-* Updated to tzdata version 2022e
-  (https://mm.icann.org/pipermail/tz-announce/2022-October/000074.html).
+* Updated to tzdata version 2022f
+  (https://mm.icann.org/pipermail/tz-announce/2022-October/000075.html).
 
 
 == Version 0.3.61 (tzdata v2022a) - 19-Jul-2022
