--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2022f) - ???????????
+== Version ?????? (tzdata v2022g) - ???????????
 
-* Updated to tzdata version 2022f
-  (https://mm.icann.org/pipermail/tz-announce/2022-October/000075.html).
+* Updated to tzdata version 2022g
+  (https://mm.icann.org/pipermail/tz-announce/2022-November/000076.html).
 
 
 == Version 0.3.61 (tzdata v2022a) - 19-Jul-2022
