--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2023b) - ???????????
+== Version ?????? (tzdata v2023c) - ???????????
 
-* Updated to tzdata version 2023b
-  (https://mm.icann.org/pipermail/tz-announce/2023-March/000078.html).
+* Updated to tzdata version 2023c
+  (https://mm.icann.org/pipermail/tz-announce/2023-March/000079.html).
 
 
 == Version 0.3.61 (tzdata v2022a) - 19-Jul-2022
