--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2023c) - ???????????
+== Version 0.3.62 (tzdata v2023c) - 10-Apr-2023
 
 * Updated to tzdata version 2023c
   (https://mm.icann.org/pipermail/tz-announce/2023-March/000079.html).
