Update to tzdata version 2023d.
https://mm.icann.org/pipermail/tz-announce/2023-December/000080.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2023d) - ???????????
+
+* Updated to tzdata version 2023d
+  (https://mm.icann.org/pipermail/tz-announce/2023-December/000080.html).
+
+
 == Version 0.3.62 (tzdata v2023c) - 10-Apr-2023
 
 * Updated to tzdata version 2023c
