Update to tzdata version 2024a.
https://mm.icann.org/pipermail/tz-announce/2024-February/000081.html

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2023d) - ???????????
+== Version ?????? (tzdata v2024a) - ???????????
 
-* Updated to tzdata version 2023d
-  (https://mm.icann.org/pipermail/tz-announce/2023-December/000080.html).
+* Updated to tzdata version 2024a
+  (https://mm.icann.org/pipermail/tz-announce/2024-February/000081.html).
 * Increased the maximum year from 2073 to 2074.
 
 
