--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2024a) - ???????????
+== Version ?????? (tzdata v2024b) - ???????????
 
-* Updated to tzdata version 2024a
-  (https://mm.icann.org/pipermail/tz-announce/2024-February/000081.html).
+* Updated to tzdata version 2024b
+  (https://lists.iana.org/hyperkitty/list/tz-announce@iana.org/message/IZ7AO6WRE3W3TWBL5IR6PMQUL433BQIE/).
 * Increased the maximum year from 2073 to 2074.
 
 
