--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2024b) - ???????????
+== Version ?????? (tzdata v2025a) - ???????????
 
-* Updated to tzdata version 2024b
-  (https://lists.iana.org/hyperkitty/list/tz-announce@iana.org/message/IZ7AO6WRE3W3TWBL5IR6PMQUL433BQIE/).
+* Updated to tzdata version 2025a
+  (https://lists.iana.org/hyperkitty/list/tz-announce@iana.org/message/MWII7R3HMCEDNUCIYQKSSTYYR7UWK4OQ/).
 * Increased the maximum year from 2073 to 2075.
 
 
